--- a/css_sandbox/03_fonts.html
+++ b/css_sandbox/03_fonts.html
@@ -1,15 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Fonts</title>
-  <style>
-   
-  </style>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <title>Fonts</title>
+    <style>
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 18px;
+        line-height: 1.6em;
+      }
+
+      #welcome p span {
+        font-weight: bold;
+      }
+
+      #about p span {
+        font-style: italic;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="welcome">
+      <h2 class="primary-heading">Welcome</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        <span>
+          Soluta necessitatibus cum ratione labore unde aliquid facere
+          consectetur tempora minima magni.
+        </span>
+      </p>
+    </div>
+    <div id="about">
+      <h2>About</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio sed amet
+        ipsam nesciunt quibusdam rem excepturi.
+        <span>Eligendi culpa quibusdam nisi?</span>
+      </p>
+    </div>
+  </body>
 </html>
