--- a/css_sandbox/04_colors.html
+++ b/css_sandbox/04_colors.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Colors</title>
-  <style>
-   
-  </style>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Colors</title>
+    <style>
+      h1 {
+        color: red;
+      }
+
+      h2 {
+        color: rgb(255, 255, 255);
+      }
+
+      h3 {
+        color: #f4f4f4;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Heading One</h1>
+    <h2>Heading Two</h2>
+    <h3>Heading Three</h3>
+  </body>
 </html>
