--- a/css_sandbox/12_form_styling.html
+++ b/css_sandbox/12_form_styling.html
@@ -11,92 +11,134 @@
     />
     <style>
       * {
-        /* 
+        /*
         -May want to add "border-box for "box-sizing so padding does not affect width
-        -Reset margin and padding 
+        -Reset margin and padding
        */
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
       }
 
       body {
-        /* 
+        /*
           -Background color is #344a72
         */
+        background-color: #344a72;
+        font-family: "Raleway", sans-serif;
+        line-height: 1.8;
       }
 
       a {
-        /* 
+        /*
         Underlined links are ugly :)
        */
+        text-decoration: none;
       }
 
       #container {
-        /* 
-        -Remember, margin: auto on left and right will center a block element 
+        /*
+        -Remember, margin: auto on left and right will center a block element
         -I would also set a "max-width" for responsiveness
         -May want to add some padding
         */
+
+        display: block;
+        max-width: 360px;
+        margin: auto;
+        margin-top: 2.5rem;
+        padding: 1.2rem;
       }
 
       .form-wrap {
-        /* 
+        /*
           This is the white area around the form and heading, etc
         */
+        background: white;
+        padding: 1rem 2rem;
       }
 
       .form-wrap h1,
       .form-wrap p {
-        /* 
+        /*
           May want to center these
         */
+        text-align: center;
       }
 
       .form-wrap .form-group {
-        /* 
+        /*
           Each label, input is wrapped in .form-group
         */
+        margin-top: 0.6rem;
       }
 
       .form-wrap .form-group label {
-        /* 
+        /*
           Label should be turned into a block element
         */
+        display: block;
+        font-size: 0.8rem;
       }
 
       .form-wrap .form-group input {
-        /* 
+        /*
           Inputs should reach accross the .form-wrap 100% and have some padding
         */
+        width: 100%;
+        padding: 0 1rem;
       }
 
       .form-wrap button {
-        /* 
+        /*
           Button should wrap accross 100% and display as block
           Background color for button is #49c1a2
         */
+        display: block;
+        background: #49c1a2;
+        width: 100%;
+        color: white;
+        border: 1px;
+        border-radius: 4px;
+        cursor: pointer;
+        font-weight: bolder;
+        font-size: 0.7rem;
+        padding: 6px;
+        margin-top: 1rem;
       }
 
       .form-wrap button:hover {
-        /* 
+        /*
           Hover background color for button is #37a08e
         */
+        background-color: #37a08e;
       }
 
       .form-wrap .bottom-text {
-        /* 
+        /*
           Bottom text is smaller
         */
+        padding-top: 1rem;
+        text-align: center;
+        font-size: 0.7rem;
       }
 
       footer {
-        /* 
+        /*
         Should be centered
        */
+        padding: 0.5rem;
+        text-align: center;
+        color: white;
+        font-size: 0.7rem;
+        font-weight: bold;
       }
 
       footer a {
-        /* 
+        /*
           Footer link color is #49c1a2
         */
+        color: #49c1a2;
       }
     </style>
   </head>
