--- a/hotel_website/about.html
+++ b/hotel_website/about.html
@@ -6,6 +6,11 @@
     <title>Hotel BT | About</title>
     <meta name="keywords" content="hotel,boston hotel, new england hotel" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="./css/mobile.css"
+    />
   </head>
   <body>
     <header>
