--- a/edge_ledger_flexbox/index.html
+++ b/edge_ledger_flexbox/index.html
@@ -39,5 +39,206 @@
         </a>
       </div>
     </header>
+
+    <main>
+      <!-- About: Icons -->
+      <section id="about" class="icons bg-light">
+        <div class="flex-items">
+          <div>
+            <i class="fas fa-university fa-2x"></i>
+            <div><h3>Investment Banking</h3></div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
+              deserunt?
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-book-reader fa-2x"></i>
+            <div><h3>Portfolio Manager</h3></div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde,
+              ab?
+            </p>
+          </div>
+          <div>
+            <i class="fas fa-pencil-alt fa-2x"></i>
+            <div><h3>Tax & Custodial</h3></div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
+              deserunt?
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- About: Solutions -->
+      <section class="solutions flex-columns">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="./images/home/people.jpg" alt="People" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-primary">
+              <h4>What you are looking for</h4>
+              <h2>We provide bespoke solutions</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus
+                deleniti numquam natus ullam. Vero, numquam at nobis neque
+                laborum repellendus, minus quod similique quis dolor quia optio
+                sequi veritatis quisquam?
+              </p>
+              <a href="#" class="btn btn-outline">
+                <i class="fas fa-chevron"></i>
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Cases -->
+      <section id="cases" class="cases flex-grid section-padding">
+        <header class="section-header">
+          <h4>This is what we do</h4>
+          <h2>Business Cases</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Perspiciatis, facilis.
+          </p>
+        </header>
+        <div class="row">
+          <div class="column">
+            <img src="./images/cases/cases1.jpg" alt="Case 1" />
+            <img src="./images/cases/cases2.jpg" alt="Case 2" />
+          </div>
+          <div class="column">
+            <img src="./images/cases/cases3.jpg" alt="Case 3" />
+            <img src="./images/cases/cases4.jpg" alt="Case 4" />
+          </div>
+          <div class="column">
+            <img src="./images/cases/cases5.jpg" alt="Case 5" />
+            <img src="./images/cases/cases6.jpg" alt="Case 6" />
+          </div>
+          <div class="column">
+            <img src="./images/cases/cases7.jpg" alt="Case 7" />
+            <img src="./images/cases/cases8.jpg" alt="Case 8" />
+          </div>
+        </div>
+      </section>
+
+      <!-- Blog -->
+      <section id="blog" class="blog flex-columns flex-reverse">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="./images/home/blog.jpg" alt="Blog" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-secondary">
+              <h4>April 16 2020</h4>
+              <h2>Blog Post One</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus
+                deleniti numquam natus ullam. Vero, numquam at nobis neque
+                laborum repellendus, minus quod similique quis dolor quia optio
+                sequi veritatis quisquam?
+              </p>
+              <a href="#" class="btn btn-outline">
+                <i class="fas fa-chevron"></i>
+                Read Our Blog
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Team -->
+      <section id="team" class="team section-padding">
+        <header class="section-header">
+          <h4>Who we are</h4>
+          <h2>Our Professional Team</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Perspiciatis, facilis.
+          </p>
+        </header>
+        <div class="flex-items">
+          <div>
+            <img src="./images/team/person1.jpg" alt="Person 1" />
+            <h4>John Doe</h4>
+            <p>President</p>
+          </div>
+          <div>
+            <img src="./images/team/person2.jpg" alt="Person 2" />
+            <h4>Jane Doe</h4>
+            <p>Vice President</p>
+          </div>
+          <div>
+            <img src="./images/team/person3.jpg" alt="Person 3" />
+            <h4>Sam Smith</h4>
+            <p>Marketing Head</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact -->
+      <section id="contact" class="contact flex-columns">
+        <div class="row">
+          <div class="column">
+            <div class="column-1">
+              <img src="./images/home/contact.jpg" alt="Contact" />
+            </div>
+          </div>
+          <div class="column">
+            <div class="column-2 bg-light">
+              <h2>Request Callback</h2>
+              <form action="" class="callback-form">
+                <div class="form-control">
+                  <label for="name"></label>
+                  <input
+                    type="text"
+                    id="name"
+                    name="name"
+                    placeholder="Enter name"
+                  />
+                </div>
+                <div class="form-control">
+                  <label for="email"></label>
+                  <input
+                    type="email"
+                    id="email"
+                    name="email"
+                    placeholder="Enter email"
+                  />
+                </div>
+                <div class="form-control">
+                  <label for="phone"></label>
+                  <input
+                    type="text"
+                    id="phone"
+                    name="phone"
+                    placeholder="Enter phone"
+                  />
+                </div>
+                <input type="submit" value="Send" id="submit" class="btn" />
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <footer class="footer bg-dark">
+        <div class="social">
+          <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+          <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
+          <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+        </div>
+        <p>Copyright &copy; 2020 - EdgeLedger</p>
+      </footer>
+    </main>
   </body>
 </html>
