el: add blogs page

--- a/edge_ledger_flexbox/index.html
+++ b/edge_ledger_flexbox/index.html
@@ -146,7 +146,7 @@
                 laborum repellendus, minus quod similique quis dolor quia optio
                 sequi veritatis quisquam?
               </p>
-              <a href="#" class="btn btn-outline">
+              <a href="blog.html" class="btn btn-outline">
                 <i class="fas fa-chevron"></i>
                 Read Our Blog
               </a>
