--- a/edge_ledger_flexbox/index.html
+++ b/edge_ledger_flexbox/index.html
@@ -9,6 +9,7 @@
       integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o="
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./css/lightbox.min.css" />
     <link rel="stylesheet" href="./css/utilities.css" />
     <link rel="stylesheet" href="./css/style.css" />
 
@@ -16,7 +17,7 @@
   </head>
   <body id="home">
     <header class="hero">
-      <div id="navbar" class="navbar">
+      <div id="navbar" class="navbar top">
         <h1 class="logo">
           <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span
           >Ledger
@@ -110,20 +111,68 @@
         </header>
         <div class="row">
           <div class="column">
-            <img src="./images/cases/cases1.jpg" alt="Case 1" />
-            <img src="./images/cases/cases2.jpg" alt="Case 2" />
+            <a
+              href="./images/cases/cases1.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit amet consectetur, adipisicing elit."
+            >
+              <img src="./images/cases/cases1.jpg" alt="Case 1" />
+            </a>
+            <a
+              href="./images/cases/cases2.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit amet consectetur, adipisicing elit."
+            >
+              <img src="./images/cases/cases2.jpg" alt="Case 2" />
+            </a>
           </div>
           <div class="column">
-            <img src="./images/cases/cases3.jpg" alt="Case 3" />
-            <img src="./images/cases/cases4.jpg" alt="Case 4" />
+            <a
+              href="./images/cases/cases3.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit amet consectetur, adipisicing elit."
+            >
+              <img src="./images/cases/cases3.jpg" alt="Case 3"
+            /></a>
+            <a
+              href="./images/cases/cases4.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit amet consectetur, adipisicing elit."
+            >
+              <img src="./images/cases/cases4.jpg" alt="Case 4"
+            /></a>
           </div>
           <div class="column">
-            <img src="./images/cases/cases5.jpg" alt="Case 5" />
-            <img src="./images/cases/cases6.jpg" alt="Case 6" />
+            <a
+              href="./images/cases/cases5.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit amet consectetur, adipisicing elit."
+            >
+              <img src="./images/cases/cases5.jpg" alt="Case 5"
+            /></a>
+            <a
+              href="./images/cases/cases6.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit amet consectetur, adipisicing elit."
+            >
+              <img src="./images/cases/cases6.jpg" alt="Case 6"
+            /></a>
           </div>
           <div class="column">
-            <img src="./images/cases/cases7.jpg" alt="Case 7" />
-            <img src="./images/cases/cases8.jpg" alt="Case 8" />
+            <a
+              href="./images/cases/cases7.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit amet consectetur, adipisicing elit."
+            >
+              <img src="./images/cases/cases7.jpg" alt="Case 7"
+            /></a>
+            <a
+              href="./images/cases/cases8.jpg"
+              data-lightbox="cases"
+              data-title="Lorem ipsum dolor sit amet consectetur, adipisicing elit."
+            >
+              <img src="./images/cases/cases8.jpg" alt="Case 8"
+            /></a>
           </div>
         </div>
       </section>
@@ -229,16 +278,56 @@
           </div>
         </div>
       </section>
-
-      <footer class="footer bg-dark">
-        <div class="social">
-          <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-          <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
-          <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
-        </div>
-        <p>Copyright &copy; 2020 - EdgeLedger</p>
-      </footer>
     </main>
+
+    <footer class="footer bg-dark">
+      <div class="social">
+        <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+        <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+        <a href="#"><i class="fab fa-youtube fa-2x"></i></a>
+        <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+      </div>
+      <p>Copyright &copy; 2020 - EdgeLedger</p>
+    </footer>
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/lightbox.min.js" />
+    <script>
+      const navbar = document.getElementById("navbar");
+      // let scrolled = false;
+
+      window.onscroll = function () {
+        if (window.pageYOffset > 100) {
+          navbar.classList.remove("top");
+          // if (!scrolled) {
+          // navbar.style.transform = "translateY(-70px)";
+          // }
+          // setTimeout(function () {
+          // navbar.style.transform = "translateY(0)";
+          // scrolled = true;
+          // }, 200);
+        } else {
+          navbar.classList.add("top");
+          // scrolled = false;
+        }
+      };
+
+      // Smooth Scrolling
+      $("#navbar a, .btn").on("click", function (e) {
+        if (this.hash !== "") {
+          e.preventDefault();
+          const hash = this.hash;
+
+          $("html, body").animate(
+            { scrollTop: $(hash).offset().top - 100 },
+            800
+          );
+        }
+      });
+    </script>
   </body>
 </html>
