--- a/edge_ledger_flexbox/post.html
+++ b/edge_ledger_flexbox/post.html
@@ -16,7 +16,7 @@
   </head>
   <body id="home">
     <header class="hero blog">
-      <div id="navbar" class="navbar">
+      <div id="navbar" class="navbar top">
         <h1 class="logo">
           <span class="text-primary"><i class="fas fa-book-open"></i> Edge</span
           >Ledger
@@ -75,5 +75,16 @@
       </div>
       <p>Copyright &copy; 2020 - EdgeLedger</p>
     </footer>
+
+    <script>
+      const navbar = document.getElementById("navbar");
+      window.onscroll = function () {
+        if (window.pageYOffset > 100) {
+          navbar.classList.remove("top");
+        } else {
+          navbar.classList.add("top");
+        }
+      };
+    </script>
   </body>
 </html>
